kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-server-deployment
  labels:
    app: hello-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-server
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      containers:
      - name: hello-server
        image: newsimwebregistry.azurecr.io/tim/hello-server:1.0.0 
        ports:
        - containerPort: 9000
        resources:
          limits:
            memory: 512Mi
            cpu: 0.4  
          requests:
            memory: 256Mi
            cpu: 0.2
