kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-server-service
  labels:
    app: hello-server
spec:
  selector:
    app: hello-server
  ports:
  - port: 9000 
    targetPort: 9000
