kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-server-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.newsimweb.cloud
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-server-service
          servicePort: 9000
